Add retirement question to brexit checker
Currently does not have any actions or grouping associated but serves a purpose by adding an option for users to create email subscriptions against or save their results URL

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -226,3 +226,5 @@ criteria:
   text: You travel to the EU for business
 - key: travel-eu-business-no
   text: You do not travel to the EU for business
+- key: retired
+  text: You are retired or semi-retired
