Update employment question to 'What do you do?'

--- a/lib/brexit_checker/questions.yaml
+++ b/lib/brexit_checker/questions.yaml
@@ -28,7 +28,7 @@ questions:
 
   - key: employment
     type: multiple_grouped
-    text: 'Do you work or study?'
+    text: 'What do you do?'
     hint_text: 'Select all that apply. If you do something else, select continue.'
     options:
       - label: Work
